calico_versioned_docs/version-3.24/getting-started/bare-metal/installation/binary.mdx
---
description: Install Calico binary on non-cluster hosts without a package manager.
---

import variables from '@site/calico_versioned_docs/version-3.24/variables';
import CodeBlock from '@theme/CodeBlock';

# Binary install without package manager

import FelixInitDatastore from '@site/calico_versioned_docs/version-3.24/_includes/content/_felix-init-datastore.mdx';

## Big picture

Install {variables.prodname} binary on non-cluster hosts without a package manager.

## Value

Install {variables.prodname} directly when a package manager isn't available, or your provisioning system can easily handle copying binaries to hosts.

## Before you begin...

1. Ensure the {variables.prodname} datastore is up and accessible from the host
1. Ensure the host meets the minimum [system requirements](../requirements.mdx)
1. If you want to install {variables.prodname} with networking (so that you can communicate with cluster workloads), you should choose the [container install method](container.mdx)
1. Install `kubectl` (for Kubernetes datastore) or [Install and configure `calicoctl`](../../../operations/calicoctl/index.mdx) for etcd3 datastore.

## How to

This guide covers installing Felix, the {variables.prodname} daemon that handles network policy.

### Step 1: Download and extract the binary

This step requires Docker, but it can be run from any machine with Docker installed. It doesn't have to be the host you will run it on (i.e your laptop is fine).

1. Use the following command to download the {variables.nodecontainer} image.

   <CodeBlock language='bash'>
   docker pull {variables.nodecontainer}:pickle
   </CodeBlock>

1. Confirm that the image has loaded by typing `docker images`.

   ```bash
   REPOSITORY       TAG           IMAGE ID       CREATED         SIZE
   {variables.nodecontainer}              e07d59b0eb8a   2 minutes ago   42MB
   ```

1. Create a temporary {variables.nodecontainer} container.

   <CodeBlock language='bash'>
   docker create --name container {variables.nodecontainer}:
   </CodeBlock>

1. Copy the calico-node binary from the container to the local file system.

   ```bash
   docker cp container:/bin/calico-node calico-node
   ```

1. Delete the temporary container.

   ```bash
   docker rm container
   ```

1. Set the extracted binary file to be executable.

   ```
   chmod +x calico-node
   chown root:root calico-node
   ```

### Step 2: Copy the `calico-node` binary

Copy the binary from Step 1 to the target machine, using any means (`scp`, `ftp`, USB stick, etc.).

### Step 3: Create environment file

<EnvironmentFile
  nodecontainer='{variables.nodecontainer}'
  install='binary'
  target='felix'
/>

### Step 4: Create a start-up script

Felix should be started at boot by your init system and the init system
**must** be configured to restart Felix if it stops. Felix relies on
that behavior for certain configuration changes.

If your distribution uses systemd, then you could use the following unit
file:

```bash
[Unit]
Description=Calico Felix agent
After=syslog.target network.target

[Service]
User=root
EnvironmentFile=/etc/calico/calico.env
ExecStartPre=/usr/bin/mkdir -p /var/run/calico
ExecStart=/usr/local/bin/calico-node -felix
KillMode=process
Restart=on-failure
LimitNOFILE=32000

[Install]
WantedBy=multi-user.target
```

Once you've configured Felix, start it up via your init system.

```bash
service calico-felix start
```

### Step 5: Initialize the datastore

<FelixInitDatastore />
